# weblate-gpt4free

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.yml.example  config.yml.example-serbian
scripts/: run_translation.py
src/: cacher.py  gpt_translator.py  translation_processor.py  utils.py  weblate_client.py
