[project]
name = "weblate-gpt4free"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
dependencies = [
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "g4f[all]>=0.3.2.6",
    "python-editor>=1.0.4",
    "setuptools>=74.1.2",
]

[tool.rye]
virtual = true
dev-dependencies = ["g4f[all]>=0.3.2.5"]
