[project]
name = "weblate-gpt4free"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
dependencies = [
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "g4f[all]>=0.3.4.0",
    "python-editor>=1.0.4",
    "setuptools>=75.5.0",
    "pip>=24.3.1",
    "diskcache>=5.6.3",
    "ruff>=0.7.4",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20241016",
]

[tool.rye]
virtual = true

[tool.ruff]
lint.select = [
    # annotations
    "ANN",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# lint.ignore = ["E501", "W291", "W292", "W293", "T201", "C901"]
lint.ignore = ["ANN101"]
line-length = 120
